# dynamics_mpc_controller

./: CMakeLists.txt  README.md  dynamics_mpc_controller.repos  dynamics_mpc_controller_plugin.xml  package.xml
auto_generated/: .gitignore
config/dual_ur5/: forward_dynamics_mpc_controller.yaml  initial_pose.yaml  inverse_dynamics_mpc_controller.yaml  ros2_controllers.yaml
config/rviz/: manipulator.rviz
config/ur5/: forward_dynamics_mpc_controller.yaml  inverse_dynamics_mpc_controller.yaml  ros2_controllers.yaml
description/common/ur5_mujoco/components/: defaults.xml  ur5_asset.xml
description/dual_ur5/mujoco/: door.xml  dual_ur5.xml  scene.xml  scene_open_door.xml
description/dual_ur5/mujoco/components/: dual_ur5_body.xml
description/dual_ur5/urdf/: dual_ur5.ros2_control.xacro  dual_ur5.urdf
description/ur5/mujoco/: door.xml.xacro  door_params.yaml  scene.xml  scene_open_door.xml  ur5.xml
description/ur5/mujoco/components/: ur5_body.xml
description/ur5/urdf/: ur5.ros2_control.xacro  ur5.ros2_control_macro.xacro  ur5.urdf  ur5_test.urdf
docs/: dynamics_mpc_formulation.md  rbf.md
docs/assets/: plot_rbf.py
include/dynamics_mpc_controller/: mpc_data.hpp  pinocchio_utils.hpp
include/dynamics_mpc_controller/common/: controller_utils.hpp  mpc_data.hpp
include/dynamics_mpc_controller/common/constraint/: dynamics_self_collision_constraint.hpp  ee_contact_friction_cone_soft_constraint.hpp
include/dynamics_mpc_controller/common/cost/: ee_motion_tracking_cost.hpp  input_tracking_cost.hpp  joint_tracking_cost.hpp
include/dynamics_mpc_controller/diagnostics/: mpc_policy_publisher.hpp
include/dynamics_mpc_controller/estimation/: momentum_observer_wrench_estimator.hpp
include/dynamics_mpc_controller/forward_dynamics_mpc/: forward_dynamics_mpc_controller.hpp  forward_dynamics_mpc_interface.hpp  forward_dynamics_mpc_model.hpp
include/dynamics_mpc_controller/forward_dynamics_mpc/cost/: forward_dynamics_state_input_cost.hpp
include/dynamics_mpc_controller/forward_dynamics_mpc/dynamics/: forward_dynamics_aba_dynamics_ad.hpp
include/dynamics_mpc_controller/forward_dynamics_mpc/initialization/: forward_dynamics_initializer.hpp
include/dynamics_mpc_controller/forward_dynamics_mpc/reference/: joint_tracking_target.hpp
include/dynamics_mpc_controller/inverse_dynamics_mpc/: inverse_dynamics_mpc_controller.hpp  inverse_dynamics_mpc_interface.hpp  inverse_dynamics_mpc_model.hpp
include/dynamics_mpc_controller/inverse_dynamics_mpc/constraint/: inverse_dynamics_constraint_cppad.hpp  inverse_dynamics_ee_wrench_tracking_constraint.hpp  inverse_dynamics_rnea_constraint_cppad.hpp  inverse_dynamics_rnea_with_ee_wrench_constraint_cppad.hpp  inverse_dynamics_with_ee_wrench_constraint_cppad.hpp
include/dynamics_mpc_controller/inverse_dynamics_mpc/cost/: inverse_dynamics_state_input_cost.hpp
include/dynamics_mpc_controller/inverse_dynamics_mpc/dynamics/: inverse_dynamics_kinematic_dynamics_ad.hpp
include/dynamics_mpc_controller/inverse_dynamics_mpc/initialization/: inverse_dynamics_initializer.hpp
include/dynamics_mpc_controller/inverse_dynamics_mpc/reference/: joint_tracking_target.hpp
include/dynamics_mpc_controller/visualization/: optimized_state_trajectory_visualization.hpp  performance_visualization.hpp  self_collision_visualization.hpp
launch/: controller_sequence.py  dual_arm_joint_tracking_target.py  dual_ur5.launch.py  dual_ur5_forward_dynamics_mpc.launch.py  ee_motion_tracking_target.py  floor_contact_tracking_target.py  joint_tracking_target.py  mujoco_external_wrench.py  ur5.launch.py  ur5_forward_dynamics_mpc.launch.py
launch/visualization/: visualize.launch.py
src/: pinocchio_utils.cpp
src/common/: controller_utils.cpp  pinocchio_utils.cpp
src/common/constraint/: dynamics_self_collision_constraint.cpp  ee_contact_friction_cone_soft_constraint.cpp
src/common/cost/: ee_motion_tracking_cost.cpp  input_tracking_cost.cpp  joint_tracking_cost.cpp
src/diagnostics/: mpc_policy_publisher.cpp
src/estimation/: momentum_observer_wrench_estimator.cpp
src/forward_dynamics_mpc/: forward_dynamics_mpc_controller.cpp  forward_dynamics_mpc_controller_parameter.yaml  forward_dynamics_mpc_interface.cpp  forward_dynamics_mpc_model.cpp
src/forward_dynamics_mpc/cost/: forward_dynamics_state_input_cost.cpp
src/forward_dynamics_mpc/dynamics/: forward_dynamics_aba_dynamics_ad.cpp
src/forward_dynamics_mpc/initialization/: forward_dynamics_initializer.cpp
src/forward_dynamics_mpc/reference/: joint_tracking_target.cpp
src/inverse_dynamics_mpc/: inverse_dynamics_mpc_controller.cpp  inverse_dynamics_mpc_controller_parameter.yaml  inverse_dynamics_mpc_interface.cpp  inverse_dynamics_mpc_model.cpp
src/inverse_dynamics_mpc/constraint/: inverse_dynamics_constraint_cppad.cpp  inverse_dynamics_ee_wrench_tracking_constraint.cpp  inverse_dynamics_rnea_constraint_cppad.cpp  inverse_dynamics_rnea_with_ee_wrench_constraint_cppad.cpp  inverse_dynamics_with_ee_wrench_constraint_cppad.cpp
src/inverse_dynamics_mpc/cost/: inverse_dynamics_state_input_cost.cpp
src/inverse_dynamics_mpc/diagnostics/: mpc_policy_publisher.cpp
src/inverse_dynamics_mpc/dynamics/: inverse_dynamics_kinematic_dynamics_ad.cpp
src/inverse_dynamics_mpc/estimation/: momentum_observer_wrench_estimator.cpp
src/inverse_dynamics_mpc/initialization/: inverse_dynamics_initializer.cpp
src/inverse_dynamics_mpc/reference/: joint_tracking_target.cpp
src/inverse_dynamics_mpc/visualization/: optimized_state_trajectory_visualization.cpp  optimized_state_trajectory_visualization_node.cpp
src/visualization/: optimized_state_trajectory_visualization.cpp  optimized_state_trajectory_visualization_node.cpp  performance_visualization.cpp  policy_visualization_node.cpp  self_collision_visualization.cpp
